Fix text overflow in api-host

--- a/src/app/components/api-host/__link/api-host__link.scss
+++ b/src/app/components/api-host/__link/api-host__link.scss
@@ -1,5 +1,6 @@
 .api-host__link {
   text-decoration: none;
+  word-break: break-word;
   font-size: 12px;
   font-weight: 600;
   line-height: 16px;
